--- a/package.json
+++ b/package.json
@@ -24,9 +24,10 @@
         "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
     },
     "peerDependencies": {
+        "@material-ui/core": "5.0.0-alpha.38",
+        "@material-ui/styles": "5.0.0-alpha.36",
         "react": "^16.8.0 || ^17.0.0",
-        "react-dom": "^16.8.0 || ^17.0.0",
-        "@material-ui/core": "^4.0.0"
+        "react-dom": "^16.8.0 || ^17.0.0"
     },
     "devDependencies": {
         "@babel/preset-react": "^7.8.3",
